# b2b-data-mass-application

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  add_region_tutorial.md  build.yml  env-maker.sh  pom.xml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  temp.txt
.azuredevops/: pull_request_template.md
Antarctica_Accounts_Creation/: account.py  account_ms.py  credit.py  discounts_ms.py  helper.py  main.py  products.py
Antarctica_Accounts_Creation/classes/: text.py
b2b-dr/android/: .gitignore  README.md  package-lock.json  package.json  python-required-libraries.txt
b2b-south-africa/helpers/: global_imports.robot
b2b-south-africa/keywords/: common_keywords.robot  login_keywords.robot
b2b-south-africa/test_cases/: login_scenarios.robot
b2b-south-africa/variables/: global_variables.robot  login_variables.robot  messages.py
data-mass/: account.py  account_ms.py  accounts.py  algo_selling.py  attribute_supplier.py  beer_recommender.py  category_magento.py  combos.py  common.py  credit.py  credit_statement.py  deals.py  delivery_window.py  discounts_ms.py  enforcement.py  files.py  helper.py  inventory.py  invoice.py  main.py  order.py  orders.py  populate.py  product_inventory.py  product_supplier.py  products.py  products_inventory.py  products_magento.py  requirements.txt  rewards.py  run.sh  simulation.py  supplier_category.py  user.py  user_creation_magento.py  user_creation_v2.py  user_creation_v3.py  user_delete_v3.py  user_v3.py  validations.py
data-mass/classes/: window.py  window_delivery_date.py
data-mass/data/: configure_order_prefix_payload.json  create_account_payload.json  create_beer_recommender_payload.json  create_beer_recommender_sell_up_payload.json  create_combo_payload.json  create_credit_payload.json  create_delivery_fee_interest_payload.json  create_discount_payload_v2.json  create_empties_discounts_payload.json  create_free_good_group_payload.json  create_free_good_no_buy_item_payload_v2.json  create_free_good_payload_v2.json  create_invoice_payload.json  create_item_payload.json  create_order_payload.json  create_promotion_payload.json  create_promotion_payload_v2.json  create_rewards_challenges.json  create_rewards_challenges_payload.json  create_rewards_program.json  create_rewards_program_payload.json  create_sku_price_payload.json  create_sku_price_payload_v2.json  create_stepped_discount_max_qtd_payload_v2.json  create_stepped_discount_payload_v2.json  create_stepped_free_good_payload_v2.json  credit_statement_payload.json  delete_deal_payload.json  input_simple_discount_v2_payload.json  input_simple_freegoods_v2_payload.json  input_stepped_discount_with_max_quantity_v2.json  input_stepped_freegods_v2_payload.json  order_simulation_middleware_payload.json  put_price_sku_microservice_v2_payload.json  update_invoice_status.json  update_item_payload.json  update_sku_limit_payload.json
data-mass/helpers/: common.py  dependencies_handling.py  requirements.txt
data-mass/logs/: log.py
data-mass/mass_populator/: README.md  all.py  common.py  csv_helper.py  data_creation_engine.py  log.py  populated_data.md  preconditions.py  product.py  regression.py  rewards.py  test.py  validation.py
data-mass/menus/: account_menu.py  algo_selling_menu.py  deals_menu.py  inventory_menu.py  invoice_menu.py  order_menu.py  product_menu.py  rewards_menu.py  supplier_menu.py
data-mass/product/: inventory.py  magento.py  products.py  supplier.py
data-mass/rewards/: rewards.py  rewards_challenges.py  rewards_programs.py  rewards_transactions.py  rewards_utils.py
data_mass/: __init__.py  accounts.py  algo_selling.py  attribute_supplier.py  category_magento.py  combos.py  common.py  config.py  credit.py  deals.py  delivery_window.py  enforcement.py  files.py  invoices.py  logger.py  main.py  orders.py  populate.py  product_inventory.py  product_supplier.py  products.py  products_magento.py  simulation.py  supplier_category.py  user_creation_v3.py  user_delete_v3.py  validations.py
data_mass/.azuredevops/: pull_request_template.md
data_mass/account/: README.md  accounts.py  credit.py  delivery_window.py
data_mass/category/: README.md  magento.py  microservice.py  relay.py  service.py
data_mass/charge/: relay.py
data_mass/classes/: text.py
data_mass/core/: terminal.py
data_mass/data/: __init__.py  create_account_multivendor.json  create_account_payload.json  create_account_us_payload.json  (+32 more)
doc/: C_STYLE_GUIDE.md  DEV_GUIDE.md  README.es.md  README.pt.md  USER_GUIDE.md
utils/: README.md  monkey_test.sh  send_multiple_requests.py
(+791 files in other folders)
