[metadata]
name = data_mass
version = attr: data_mass.__version__
author = BEES Community
author_email = qcoe@ab-inbev.com
maintainer = Data Mass Team
maintainer_email = qcoe.data@ab-inbev.com
description = Data generation
long_description = file: README.md
url=https://dev.azure.com/ab-inbev/GHQ_B2B_Delta/_git/b2b-data-mass-application
project_urls =
    Documentation=https://ab-inbev.atlassian.net/wiki/spaces/PKB/pages/2175860865/Data+Mass
    Standards=https://anheuserbuschinbev.sharepoint.com/sites/b2bengineering/architecture/SitePages/Data-Mass-Application.aspx
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    requests>=2.23.0
    jsonpath-rw-ext>=1.2.2
    jsonpath-rw>=1.4.0
    pyotp>=2.3.0
    tabulate>=0.8.0
    pandas>=1.0.5
    PyJWT>=2.0.0
    PyQt5>=5.15.2
    pymongo>=3.11.2
    dnspython>=2.1.0
    gql~=3.0.0a5
    pre-commit==2.12.0
    pyperclip>=1.8.2
    click>=7.1.2
python_requires = >=3.7.0
include_package_data = True

[options.extras_require]
testing =
    pytest>=4.4.0
    pytest-xdist==1.31.0
    pytest-cov==2.8.1
linter =
    pylint==2.7.4
    flake8==3.9.1

[options.package_data]
request_body = data/*.json
populator_mock_data =
    populator/country/data/*.csv
    populator/country/data/ar/*.csv
    populator/country/data/br/*.csv
    populator/country/data/ca/*.csv
    populator/country/data/co/*.csv
    populator/country/data/do/*.csv
    populator/country/data/ec/*.csv
    populator/country/data/mx/*.csv
    populator/country/data/pa/*.csv
    populator/country/data/pe/*.csv
    populator/country/data/py/*.csv
    populator/country/data/ar/*.csv

[options.entry_points]
console_scripts =
    data-mass = data_mass.main:show_menu

[flake8]
exclude =
    .git,
    __pycache__,
    venv,
    accounts.py
    algo_selling.py,
    category_magento.py
    combos.py,
    common.py,
    credit.py,
    deals.py,
    delivery_window,
    main.py,
    orders.py,
    populate.py,
    simulation.py,
    simulation.py,
    data_mass/user/*.py
    data_mass/populator/*.py
