[metadata]
name = data_mass
version = attr: data_mass.__version__
author = BEES Community
author_email = qcoe@ab-inbev.com
maintainer = Data Mass Team
maintainer_email = qcoe.data@ab-inbev.com
description = Data generation
long_description = file: README.md
url=https://dev.azure.com/ab-inbev/GHQ_B2B_Delta/_git/b2b-data-mass-application
project_urls =
    Documentation=https://ab-inbev.atlassian.net/wiki/spaces/PKB/pages/2175860865/Data+Mass
    Standards=https://anheuserbuschinbev.sharepoint.com/sites/b2bengineering/architecture/SitePages/Data-Mass-Application.aspx
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    requests>=2.23.0
    jsonpath-rw-ext>=1.2.2
    jsonpath-rw>=1.4.0
    pyotp>=2.3.0
    tabulate>=0.8.0
    pandas>=1.0.5
    PyJWT>=2.0.0
    PyQt5>=5.15.2
    pymongo>=3.11.2
    dnspython>=2.1.0
    gql~=3.0.0a5
    pre-commit==2.12.0
    pyperclip>=1.8.2
    click>=7.1.2
python_requires = >=3.7.0
include_package_data = True

[options.extras_require]
testing =
    pytest>=4.4.0
    pytest-xdist==1.31.0
    pytest-cov==2.8.1
linter =
    pylint==2.7.4
    flake8==3.9.1

[options.package_data]
data_mass.data = 
    *.csv
    files/*.pdf
data_mass.populator =
    country/data/*.csv
    country/data/ar/*.csv
    country/data/br/*.csv
    country/data/ca/*.csv
    country/data/co/*.csv
    country/data/do/*.csv
    country/data/ec/*.csv
    country/data/mx/*.csv
    country/data/pa/*.csv
    country/data/pe/*.csv
    country/data/py/*.csv
    country/data/ar/*.csv

[options.entry_points]
console_scripts =
    data-mass = data_mass.main:show_menu

[flake8]
exclude =
    .git,
    __pycache__,
    venv,
    algo_selling.py,
    category_magento.py
    combos.py,
    common.py,
    credit.py,
    deals.py,
    delivery_window.py,
    enforcement.py,
    invoices.py,
    main.py,
    orders.py,
    populate.py,
    simulation.py,
    simulation.py,
    data_mass/user/*.py
    data_mass/populator/*.py,
    data_mass/rewards/*.py

[mypy]
platform = linux-64
ignore_missing_imports = True
show_error_codes = True
warn_unused_ignores = True
